# BotCT

./: README.md  bot.py  main.py  make_maps.py  pyproject.toml
outputs/: game_state.json
src/: api5.py  file_summaries.txt  final_summary.txt  suggest_edits.txt
src/2026-03-26_01/: api.py  file_summaries.txt  final_summary.txt
src/botc/: __init__.py  enums.py  game.py  player.py  writer.py
src/botc/behaviors/: __init__.py  base.py  demons.py  minions.py  outsiders.py  townsfolk.py
src/botc/botmgr/: __init__.py  bot.py
src/botc/core/: __init__.py  distribution.py  game.py
src/botc/decklists/: default.json
src/botc/discord_manager/: __init__.py  bot.py  polling.py  views.py
src/botc/discord_manager/cogs/: game_commands.py
src/botc/encounters/: __init__.py  base.py  deck.py  enums.py  simple.py
src/botc/events/: __init__.py  base.py  deck.py  simple.py
src/botc/interface/: __init__.py  interface.py
src/botc/selectors/: __init__.py  selector.py
src/botc/utils/: __init__.py  game_io.py
src/botmgr/: __init__.py  bot.py
src/discord/: __init__.py
src/interface/: interface.py
test/: kms.py  test_behaviors.py  test_events.py  test_game.py
